--- a/css/style.css
+++ b/css/style.css
@@ -139,14 +139,14 @@ table {
 }
 
 /* 共用 */
-section{
+section {
     height: 100vh;
 }
 
 /* header */
 header {
     display: flex;
-    justify-content: space-between;    
+    justify-content: space-between;
     align-items: center;
     position: fixed;
     width: 100%;
@@ -163,13 +163,14 @@ header .nav .menu {
 
 
 header .nav .menu a {
-    color: black;
+    color: white;
     text-decoration: none;
     transition: 0.3s ease;
+    font-size: 18px;
 }
 
 header .nav .menu a:hover {
-    font-size: 1.2rem;
+    font-size: 20px;
 }
 
 header .nav .menu img {
@@ -187,7 +188,7 @@ header .nav .menu img {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.7);
     z-index: 1000;
     gap: 50px;
     color: white;
@@ -226,18 +227,125 @@ header .nav .menu img {
     gap: 20px;
 }
 
-.toggleMenu .abouts .img{
+.toggleMenu .abouts .img {
     display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     width: 100%;
     gap: 30px;
 }
 
-.toggleMenu .abouts img{
+.toggleMenu .abouts img {
     transform: scale(1.6);
 }
 
+.toggleMenu .abouts img:hover {
+    opacity: 0.7;
+}
+
+/* banner */
+.video-container {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+/* scrolling */
+#scrolling{
+    height: 40vh;
+}
+
+.parallax-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    width: 100%;
+    min-height: 40vh;
+}
+
+.parallax-item h2 {
+    font-size: 3rem;
+    padding: 1rem;
+    border-radius: 1rem;
+}
+
+.parallax-item:nth-of-type(1) {
+    background: url("https://images.unsplash.com/photo-1663183539627-adbe2c8ef43d?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjM5Mzk5ODc&ixlib=rb-1.2.1&q=80");
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    /* min-height: calc(100vh - 75px); */
+}
+
+/* .parallax-item:nth-of-type(2) {
+    background: url("https://images.unsplash.com/photo-1663183539627-adbe2c8ef43d?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjM5Mzk5ODc&ixlib=rb-1.2.1&q=80");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+ */
+
+
+/* Footer */
+.footer {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 50px;
+}
+
+.footer-address {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-menu {
+    display: flex;
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    padding: 10px 0;
+    gap: 65px;
+}
+
+.footer-menu a {
+    text-decoration: none;
+    color: black;
+    transition: 0.3s ease;
+}
+
+.footer-menu a:hover {
+    font-size: 1.2rem;
+}
+
+.footer-abouts {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.footer-abouts .img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 30px;
+}
+
+.footer-abouts img {
+    transform: scale(1.6);
+}
+
+.footer-abouts img:hover {
+    opacity: 0.8;
+}
 
 
 /* 滾動 */
