--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,7 @@ header .nav .menu a:hover {
 
 header .nav .menu img {
     cursor: pointer;
+    transition: 0.35s ease-in;
 }
 
 .toggleMenu {
@@ -194,6 +195,13 @@ header .nav .menu img {
     z-index: 1000;
     gap: 50px;
     color: white;
+    transform: translateY(-100%);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.toggleMenu.show {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .toggleMenu span {
@@ -407,5 +415,46 @@ header .nav .menu img {
 
 /* products */
 #products{
+    width: 100%;
     background-color: #654321;
+    display: flex;
+    flex-direction: column;
+    justify-content:  center;
+    align-items: center;
+}
+
+#wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    width: 500px;
+    height: 500px;
+}
+
+#wrap img {
+    width: 100%;
+    height: 100%;
+}
+
+.layout-box {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+    gap: 50px;
+}
+
+.box {
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+    overflow: hidden;
+}
+
+.box img{
+    width: 100%;
+    object-fit: contain;
+    background-position: center;
 }
