--- a/css/cards.css
+++ b/css/cards.css
@@ -46,7 +46,7 @@
 
 .btn {
     background-color: #f76591;
-    background-image: linear-gradient(-180deg, #ffc16f, #f76591);
+    background-image: linear-gradient(-90deg, #ffc16f, #f76591);
     font-size: clamp(0.8rem, 8vw, 0.9rem);
     font-weight: 600;
     color: #fff;
@@ -127,9 +127,9 @@
     transform: translate(var(--x), -50%) scale(1.05);
 }
 
-.card:nth-last-child(1) img {
+/* .card:nth-last-child(1) img {
     box-shadow: 0 1px 5px 5px rgba(255, 193, 111, 0.5);
-}
+} */
 
 .swap {
     animation: swap 1.3s ease-out forwards;
